--- a/frontend/src/components/student/student.css
+++ b/frontend/src/components/student/student.css
@@ -1,4 +1,4 @@
-@import url("httpss://fonts.googleapis.com/css?family=Roboto");
+@import url("https://fonts.googleapis.com/css?family=Roboto");
 
 .form-body {
   background: linear-gradient(to right, #78a7ba 0%, #385d6c 50%, #78a7ba 99%);
